--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "next",
+    "react-dom": "next",
     "react-scripts": "3.0.0"
   },
   "scripts": {
